# HazeRemove

./: build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/cn/scut/dongxia/hazeremove/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/include/: cn_scut_dongxia_hazeremove_dehaze_DeHaze.h  dehaze.h
app/src/main/cpp/source/: dehaze.cpp  fastguidedfilter.cpp  main.cpp  native-lib.cpp
app/src/main/java/cn/scut/dongxia/hazeremove/: AutoFitTextureView.java  CameraFragment.java  ImageFragment.java  MainActivity.java  SettingsFragment.java
app/src/main/java/cn/scut/dongxia/hazeremove/camera/: AbsCameraBridgeView.java  CameraBridgeViewBase.java  CameraPreview.java  CameraView.java  FpsMessage.java  FpsMeter.java  Processor.java
app/src/main/java/cn/scut/dongxia/hazeremove/dehaze/: DeHaze.java
app/src/main/java/dehaze/: DarkChannel.java  DeHaze.java  FastGuidedFilter.java  FastGuidedFilterColor.java  FastGuidedFilterMono.java  GuidedFilter.java  GuidedFilterColor.java  GuidedFilterMono.java  HazeRemove.java  ImageHazeRemove.java  VideoHazeRemove.java
app/src/main/java/util/: Trans.java
app/src/main/res/layout/: activity_main.xml  fragment_camera.xml  fragment_image.xml
app/src/main/res/layout-land/: camera_control_layout.xml  fragment_camera.xml  settings_panel.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/main/res/xml/: settings.xml
app/src/main/res/xml-land/: settings.xml
app/src/test/java/cn/scut/dongxia/hazeremove/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary331/: build.gradle
openCVLibrary331/src/main/java/org/opencv/android/: CameraBridgeViewBase.java
